# bootcamp-2025-project

./: .gitignore  CLAUDE.md  Makefile  README.md  RUNNING.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
app/: main.py
app/api/: routes_history.py  routes_predict.py  routes_prompts.py
app/core/: config.py  dependencies.py  errors.py  logging.py
app/instrumentation/: observers.py
app/models/: domain.py  provider.py  schemas.py
app/services/: db_service.py  llm_client.py  processor.py  prompt_store.py  template_renderer.py
docker/: Dockerfile  Dockerfile.streamlit
instances/: db.py  log_db.py
tests/: test_predict_api.py  test_prompts_api.py
tests/fixtures/sample_texts/: article.txt  invoice.txt
